ContentCard title overflow fix

--- a/src/components/ContentCard/ContentCard.module.css
+++ b/src/components/ContentCard/ContentCard.module.css
@@ -1,4 +1,5 @@
 .card {
+    overflow-wrap: break-word;
     background: light-dark(#ffffff, #090012);
     border: 4px solid light-dark(var(--mantine-color-violet-light-hover), #160426);
     transition: 0.3s ease;
